--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,5 +1,5 @@
 <div class="accueil-content">
-    <div class="main-hook">
+    <div id="main-hook">
         <div class="first-hook">
             <div class="lign1"></div>
             <p class="first-lines-hook"><span class="bold-style">Votez pour votre film préféré,</span><br/>
