--- a/public/views/movies.html
+++ b/public/views/movies.html
@@ -23,7 +23,7 @@
         <div class="column column3">
             <img class="gold-form" src="/public/images/splash.png" alt="gold-form">
 
-            <div class="countdown-form">
+            <div class="countdown-shape">
                 <div class="column column1">
                     <p class="countdown-number">6</p>
                     <p class="countdown-number">6</p>
