--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -136,21 +136,27 @@ header, .main-content, footer {
     padding: 5%;
 }
 
-.navbar {
-    display: flex;
-    align-items: center;
-}
+/*.navbar {*/
+/*    flex-direction: column;*/
+/*    flex-wrap: nowrap;*/
+/*}*/
 
 .nav {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+
+}
+
+.nav li:hover {
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
 }
 
 #inscription-form, #connexion-form {
     margin: calc(2% + 20px) 0;
 }
 
-.movies-item, .historical-item {
+#movies-item, #historical-item {
     display: none;
 }
 
@@ -159,22 +165,22 @@ header.row {
     display: flex;
 }
 
-header, .nav {
+header .nav {
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+header nav li{
     width: 100%;
 }
 
-.nav li:hover {
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 10px;
-}
-
-header .search-logout-item {
+header #search-logout-item {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     flex: 1;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    height: 76px;
 }
 
 header .logo-item {
@@ -183,7 +189,7 @@ header .logo-item {
     margin-right: 30px;
 }
 
-header .search-logout-item span {
+header #search-logout-item span {
     display: block;
     font-size: 110%;
 }
@@ -196,19 +202,18 @@ header #logout-item {
     margin-left: 30px;
 }
 
-header .search-logout-item #logout-item {
+header #search-logout-item #logout-item {
     color: #eee;
     font-size: 90%;
 }
 
-.navbar-toggler {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: .25rem .75rem;
-    background: none;
-    border: none;
-}
+/*.navbar-toggler {*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    background: none;*/
+/*    border: none;*/
+/*}*/
 
 .navbar-toggler-icon {
     background: url("../images/ic-menu-mobile.png") no-repeat center center;
@@ -226,7 +231,7 @@ header .search-logout-item #logout-item {
     color: #f7b436;
 }
 
-.main-hook p {
+#main-hook p {
     font-size: 26px;
 }
 
@@ -239,7 +244,7 @@ p.members-hook {
 }
 
 #home-buttons {
-    display: none;
+    display: flex;
     flex-direction: column-reverse;
     min-width: 115px;
     width: 20%;
@@ -399,7 +404,7 @@ p.members-hook {
 }
 
 .movies-hook > .column2 {
-    width: 50%;
+    width: 100%;
     padding: 5% 0;
     z-index: 1;
 }
@@ -408,9 +413,10 @@ p.members-hook {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-end;
-    width: 50%;
+    align-items: center;
+    width: 100%;
     padding-right: 5%;
+    min-height: 213px;
 }
 
 .best-week-movie-hook {
@@ -426,12 +432,12 @@ p.members-hook {
     left: auto;
 }
 
-.countdown-form {
+.countdown-shape {
     display: flex;
     justify-content: space-between;
 }
 
-.countdown-form .column {
+.countdown-shape .column {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -636,6 +642,11 @@ footer .footer-row .facebook-item, footer .footer-row .pinterest-item, footer .f
         margin-left: 12px;
     }
 
+    .movies-hook > .column3 {
+        width: 100%;
+        min-height: 100%;
+    }
+
     footer .footer-row {
         padding: 2% 0;
     }
@@ -665,7 +676,6 @@ footer .footer-row .facebook-item, footer .footer-row .pinterest-item, footer .f
         margin-bottom: 0;
         display: flex;
     }
-
 }
 
 @media (min-width: 992px) {
@@ -677,11 +687,17 @@ footer .footer-row .facebook-item, footer .footer-row .pinterest-item, footer .f
     body .btn, body .form-control {
         width: auto;
     }
+
+
 }
 
 @media (min-width: 1200px) {
 
     header, .main-content, footer {
         padding: 0 20%;
+    }
+
+    .movies-hook > .column2 {
+        width: 50%;
     }
 }
