--- a/public/views/inscription.html
+++ b/public/views/inscription.html
@@ -5,9 +5,6 @@
             <div class="mb-3">
                 <label for="login">Login <span class="text-muted">*</span></label>
 
-                <div id="invalid-empty-login-feedback" class="invalid-feedback">
-                    La longueur de votre login doit être comprise entre 3 et 18 caractères.
-                </div>
                 <div id="invalid-regex-login-feedback" class="invalid-feedback">
                     Votre login doit contenir uniquement des caractères alphanumériques.
                 </div>
@@ -15,13 +12,13 @@
                     La longueur de votre login doit être comprise entre 3 et 18 caractères.
                 </div>
 
-                <input type="text" class="form-control" id="login" name="login" placeholder="Login" onBlur="validateLogin()">
+                <input type="text" class="form-control" id="login" name="login" placeholder="Login" onBlur="validateInscriptionLogin()">
             </div>
 
             <div class="mb-3">
                 <label for="mail">Email <span class="text-muted">*</span></label>
 
-                <div id="invalid-email-login-feedback" class="invalid-feedback">
+                <div id="invalid-format-email-feedback" class="invalid-feedback">
                     Votre email n'est pas au bon format.
                 </div>
 
@@ -35,7 +32,7 @@
                     La longueur de votre mot de passe doit être au minimum de 12 caractères.
                 </div>
 
-                <input type="password" id="password" class="form-control" name="password" placeholder="Password" onBlur="validatePassword()">
+                <input type="password" id="password" class="form-control" name="password" placeholder="Password" onBlur="validateInscriptionPassword()">
             </div>
 
             <div class="mb-3">
@@ -45,7 +42,7 @@
                     Vous devez avoir plus de 15 ans pour vous inscrire.
                 </div>
 
-                <input type="date" class="form-control" id="birth_date" name="birth_date" placeholder="Date of Birth" onKeyUp="validateAge()" >
+                <input type="date" class="form-control" id="birth_date" name="birth_date" placeholder="Date of Birth" onKeyUp="validateInscriptionAge()" >
             </div>
 
             <div id="invalid-empty-feedback" class="invalid-feedback">
