--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -66,7 +66,9 @@ body .invalid-feedback {
 /** LOADER ****************************************************************/
 
 #loader {
-    margin: auto;
+    margin: 40px 0 40px 30%;
+    height: 70px;
+    width: 70px;
 }
 
 /** PAGES ******************************************************************************************************************************/
@@ -407,7 +409,7 @@ p.members-hook {
     justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 5% 0 5% 5%;
+    padding-right: 5%;
     min-height: 213px;
 }
 
@@ -440,14 +442,13 @@ p.members-hook {
     font-size: 200%;
     color: #1b1b1d;
     text-align: center;
-    background: rgba(27, 27, 29, 0.1);
+    background: rgba(200, 200, 200, 0.5);
     border-radius: 5px;
     width: 45%;
 }
 
 .time-indication {
     width: 100%;
-    text-align: center;
 }
 
 #all-movies-items {
@@ -641,11 +642,6 @@ footer .footer-row .facebook-item, footer .footer-row .pinterest-item, footer .f
         margin-left: 12px;
     }
 
-    .movies-hook > .column3 {
-        width: 100%;
-        min-height: 100%;
-    }
-
     footer .footer-row {
         padding: 2% 0;
     }
@@ -686,12 +682,17 @@ footer .footer-row .facebook-item, footer .footer-row .pinterest-item, footer .f
     body .btn, body .form-control {
         width: auto;
     }
+
+    .movies-hook > .column3 {
+        width: 50%;
+        min-height: 100%;
+    }
 }
 
 @media (min-width: 1200px) {
 
     header, .main-content, footer {
-        padding: 5% 20%;
+        padding: 0 20%;
     }
 
     .movies-hook > .column2 {
