--- a/public/views/inscription.html
+++ b/public/views/inscription.html
@@ -22,7 +22,7 @@
                     Votre email n'est pas au bon format.
                 </div>
 
-                <input type="email" class="form-control" id="mail" name="mail" placeholder="you@example.com" onBlur="validateMail()">
+                <input type="email" class="form-control" id="mail" name="mail" placeholder="you@example.com" onBlur="validateInscriptionMail()">
             </div>
 
             <div class="mb-3">
