--- a/public/views/home.html
+++ b/public/views/home.html
@@ -10,5 +10,7 @@
         <p class="last-lines"> au fil des jours !</p>
 
         <p class="members-hook">Déjà <span class="members-number">284 056</span> membres</p>
+
+        <div id="home-buttons"></div>
     </div>
 </div>
