fixed some details of the connexion

--- a/public/views/connexion.html
+++ b/public/views/connexion.html
@@ -1,4 +1,4 @@
-<div id="form-content" class="row">
+<div id="form-content" class="row content">
     <div class="col-md-8 order-md-1">
         <h4 class="mb-3">Connection</h4>
         <form method="POST" id="connexion-form" class="needs-validation">
