--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,4 @@
-<div class="accueil-content">
+<div class="accueil-content content">
     <div id="main-hook">
         <div class="first-hook">
             <div class="lign1"></div>
