--- a/public/views/movies.html
+++ b/public/views/movies.html
@@ -1,4 +1,4 @@
-<div class="movies-content">
+<div class="movies-content content">
     <div class="movies-hook">
         <div class="column column1">
                 <div class="first-hook">
