--- a/public/views/error.html
+++ b/public/views/error.html
@@ -1,4 +1,4 @@
-<div id="error-content">
+<div id="error-content content">
     <img class="error-image" src="/public/images/error.png" alt="error-icon"/>
     <p id="error-inscription-message">
         La page que vous recherchez n'existe pas ou <br/>
